--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,2 +1,11 @@
-GEMINI_API_KEY=YOUR_API_KEY_HERE
+# Google Gemini API Key
+# Get your API key from: https://makersuite.google.com/app/apikey
+GEMINI_API_KEY=your_gemini_api_key_here
+
+# Supabase Configuration
+# Get these from your Supabase project settings: https://supabase.com/dashboard/project/_/settings/api
+SUPABASE_URL=https://your-project.supabase.co
+SUPABASE_ANON_KEY=your_supabase_anon_key_here
+
+# Server Configuration
 PORT=8000
