--- a/backend/.env.template
+++ b/backend/.env.template
@@ -1,6 +1,8 @@
-# Google Gemini API Key
-# Get your API key from: https://makersuite.google.com/app/apikey
-GEMINI_API_KEY=your_gemini_api_key_here
+# Google Gemini API Key (for Gemini 3 Pro image generation)
+# Get your API key from: https://aistudio.google.com/app/apikey
+# Paper Banana uses GOOGLE_API_KEY, legacy code uses GEMINI_API_KEY
+GOOGLE_API_KEY=your_google_api_key_here
+GEMINI_API_KEY=your_google_api_key_here
 
 # Supabase Configuration
 # Get these from your Supabase project settings: https://supabase.com/dashboard/project/_/settings/api
